fix widget table overflow display bug

--- a/views/themes/widget/assets/stylesheets/widget/widget.scss
+++ b/views/themes/widget/assets/stylesheets/widget/widget.scss
@@ -15,7 +15,7 @@
     .qor-slideout__lists-item {
         img {
             max-width: 100%;
-            box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+            box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
             margin: 0 auto;
             display: block;
             margin-bottom: 8px;
@@ -27,13 +27,13 @@
             padding: 8px;
             border-radius: 2px;
             width: 27%;
-            color: rgba(0, 0, 0, .75);
+            color: rgba(0, 0, 0, 0.75);
             margin-right: 2%;
             margin-bottom: 24px;
             text-align: center;
 
             &:hover {
-                background-color: rgba(0, 0, 0, .04);
+                background-color: rgba(0, 0, 0, 0.04);
             }
 
             &::nth-child(3n) {
@@ -46,7 +46,7 @@
 .qor-layout__widget-new {
     .qor-layout__widget-selector {
         margin-top: -20px;
-        & + [data-section-title="Settings"] {
+        & + [data-section-title='Settings'] {
             display: none;
         }
         .qor-layout__widget-name {
@@ -77,7 +77,6 @@
 
 .qor-theme-widget {
     .qor-table__content {
-        overflow: inherit;
         max-height: none;
     }
 
